String.format replaced on .formatted :D